--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/WebApplication4/config/applicationhost.config
+/.vs/WebApplication4/config/debuggerConfiguration-4e2ec65a-b263-4369-aed6-51fd05010dbc.json
+/.vs/WebApplication4/v16/.suo
