--- a/WebApplication4/ClientApp/package.json
+++ b/WebApplication4/ClientApp/package.json
@@ -40,7 +40,9 @@
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.1",
-    "popper.js": "^1.16.0"
+    "popper.js": "^1.16.0",
+    "@sentry/angular": "^6.4.1",
+    "@sentry/tracing": "^6.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.0",
