--- a/WebApplication4/appsettings.json
+++ b/WebApplication4/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-1HVSAG6;Database=aspnet-WebApplication4-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-1HVSAG6;Database=aspnet-denver-ui;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   },
   "IdentityServer": {
     "Clients": {
-      "WebApplication4": {
+      "Denver.UI": {
         "Profile": "IdentityServerSPA"
       }
     }
