--- a/WebApplication4/ClientApp/package.json
+++ b/WebApplication4/ClientApp/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:ssr": "ng run WebApplication4:server:dev",
+    "build:ssr": "ng run Denver.UI:server:dev",
     "test": "jest --coverage=true",
     "lint": "ng lint",
     "e2e": "ng e2e"
